{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 33,
  "lineage": "25bb4226-695f-4b74-cad6-b8bc941eb32d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:security-group/sg-0a92c57f1bb3f3803",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a92c57f1bb3f3803",
            "ingress": [],
            "name": "tfg-taekwondo-cluster-sg",
            "name_prefix": "",
            "owner_id": "654654433904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfg-taekwondo-cluster-sg"
            },
            "tags_all": {
              "Name": "tfg-taekwondo-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:network-acl/acl-02508faed15378b47",
            "default_network_acl_id": "acl-02508faed15378b47",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02508faed15378b47",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654433904",
            "subnet_ids": [
              "subnet-07538b16c36054e57",
              "subnet-0ed076f4cf2b2ed1e",
              "subnet-0f2248f20d8716244",
              "subnet-0f355abfa035098aa"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-default",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-default",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:route-table/rtb-0253bb0cf08e244b9",
            "default_route_table_id": "rtb-0253bb0cf08e244b9",
            "id": "rtb-0253bb0cf08e244b9",
            "owner_id": "654654433904",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-default",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-default",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:security-group/sg-07aa241aa118f2a26",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07aa241aa118f2a26",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654433904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-default",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-default",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00daa092cc6750b4b",
            "arn": "arn:aws:ec2:us-east-1:654654433904:elastic-ip/eipalloc-00daa092cc6750b4b",
            "association_id": "eipassoc-03514f25fe26882ed",
            "domain": "vpc",
            "id": "eipalloc-00daa092cc6750b4b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0df75ea7b963a4ee0",
            "private_dns": "ip-10-0-101-216.ec2.internal",
            "private_ip": "10.0.101.216",
            "public_dns": "ec2-44-219-207-40.compute-1.amazonaws.com",
            "public_ip": "44.219.207.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:internet-gateway/igw-0a37be6d78e456fd8",
            "id": "igw-0a37be6d78e456fd8",
            "owner_id": "654654433904",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00daa092cc6750b4b",
            "association_id": "eipassoc-03514f25fe26882ed",
            "connectivity_type": "public",
            "id": "nat-052a3511af4db7f0d",
            "network_interface_id": "eni-0df75ea7b963a4ee0",
            "private_ip": "10.0.101.216",
            "public_ip": "44.219.207.40",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07538b16c36054e57",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a46cd4de55ea0b551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052a3511af4db7f0d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a46cd4de55ea0b55",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a37be6d78e456fd8",
            "id": "r-rtb-0c4e292d90f9c8d761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c4e292d90f9c8d76",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:route-table/rtb-0a46cd4de55ea0b55",
            "id": "rtb-0a46cd4de55ea0b55",
            "owner_id": "654654433904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052a3511af4db7f0d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-private",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-private",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:route-table/rtb-0c4e292d90f9c8d76",
            "id": "rtb-0c4e292d90f9c8d76",
            "owner_id": "654654433904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a37be6d78e456fd8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-public",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-public",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03794baca38421dc4",
            "route_table_id": "rtb-0a46cd4de55ea0b55",
            "subnet_id": "subnet-0f2248f20d8716244"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7ec185fabed5bcc",
            "route_table_id": "rtb-0a46cd4de55ea0b55",
            "subnet_id": "subnet-0f355abfa035098aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1251df4bb149161",
            "route_table_id": "rtb-0c4e292d90f9c8d76",
            "subnet_id": "subnet-07538b16c36054e57"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf0a9ba4655a6214",
            "route_table_id": "rtb-0c4e292d90f9c8d76",
            "subnet_id": "subnet-0ed076f4cf2b2ed1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:subnet/subnet-0f2248f20d8716244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2248f20d8716244",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654433904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-private-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-private-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:subnet/subnet-0f355abfa035098aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f355abfa035098aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654433904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-private-us-east-1b",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-private-us-east-1b",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:subnet/subnet-07538b16c36054e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07538b16c36054e57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654433904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-public-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-public-us-east-1a",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:subnet/subnet-0ed076f4cf2b2ed1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed076f4cf2b2ed1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654433904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-public-us-east-1b",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc-public-us-east-1b",
              "Project": "TFG-Taekwondo",
              "Terraform": "true",
              "kubernetes.io/cluster/tfg-taekwondo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ac77a6fac21f960"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654433904:vpc/vpc-07ac77a6fac21f960",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02508faed15378b47",
            "default_route_table_id": "rtb-0253bb0cf08e244b9",
            "default_security_group_id": "sg-07aa241aa118f2a26",
            "dhcp_options_id": "dopt-020a64f458a40232e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ac77a6fac21f960",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0253bb0cf08e244b9",
            "owner_id": "654654433904",
            "tags": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tfg-taekwondo-vpc",
              "Project": "TFG-Taekwondo",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}